--- a/index.html
+++ b/index.html
@@ -48,9 +48,12 @@ body, html {
 /*----------------------------------------------------------------- body css---------------------------------------------------------------*/
 
 
-h1 {text-align: center;}
-p {text-align: center;}
-div {text-align: center;}
+h1 {text-align: center;
+  padding-right: 30px;
+  padding-bottom: 30px;}
+p {text-align: center;
+  padding-right: 30px;
+  padding-bottom: 30px;}
 
 
 /*----------------------------------------------------------------- top menu css---------------------------------------------------------------*/
@@ -115,13 +118,13 @@ div {text-align: center;}
 
 <br>
 
-<h1 style="color:DodgerBlue;" style="font-size:110%;">>I am a Consultant.</h1>
-<p style="font-size:120%;"> The word consultant is defined as someone who provides expert advice. My life has been developed around this basic premise. Advice is
+<h1 style="font-size:110%;">>I am a Consultant.</h1>
+<p style="color:DodgerBlue;" style="font-size:120%;"> The word consultant is defined as someone who provides expert advice. My life has been developed around this basic premise. Advice is
   shared when there is a problem with a current system or where there is room for that system to improve. The advice that I often give 
   is to myself in order to continuously improve my life. I also offer advice, often times to no avail, to others. 
 </p>
 <br>
-<p style="color:DodgerBlue;" style="font-size:120%;"> This page will be used to update myself and the world about my life happenings. I hope to write frequently on this 
+<p style="font-size:120%;"> This page will be used to update myself and the world about my life happenings. I hope to write frequently on this 
   but alas, all wishes do not come true. I have a lot of interests, endeavors and passions that I hope to share through this platform so 
   please join me on this ride!
 </p>
