--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@ body, html {
 /*----------------------------------------------------------------- body css---------------------------------------------------------------*/
 
 
-h1 {text-align: center;}
-p {text-align: center;}
+h1 {text-align: center; margin-right: 150px;
+  margin-left: 150px;}
+p {text-align: center; margin-right: 150px;
+  margin-left: 150px;}
 div {text-align: center;}
 
 
@@ -115,7 +117,7 @@ div {text-align: center;}
 
 <br>
 
-<h1 style="font-size:110%;">I am a Consultant.</h1>
+<h1 style="font-size:200%;">I am a Consultant.</h1>
 <br>
 <p style="color:DodgerBlue;"style="font-size:120%;"> The word consultant is defined as someone who provides expert advice. My life has been developed around this basic premise. Advice is
   shared when there is a problem with a current system or where there is room for that system to improve. The advice that I often give 
