--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@ div {text-align: center;}
 
 <br>
 
-<h1 style="font-size:300%;">I am a Consultant.</h1>
+<h1 style="font-size:300%;">I am a Problem Solver.</h1>
 <br>
-<p style="color:DodgerBlue;"style="font-size:150%;"> The word consultant is defined as someone who provides expert advice. My life has been developed around this basic premise. Advice is
+<p style="color:DodgerBlue;"style="font-size:300%;"> The word consultant is defined as someone who provides expert advice. My life has been developed around this basic premise. Advice is
   shared when there is a problem with a current system or where there is room for that system to improve. The advice that I often give 
   is to myself in order to continuously improve my life. I also offer advice, often times to no avail, to others. 
 </p>
