--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ h1 {text-align: center; margin-right: 150px;
   margin-left: 150px;}
 p {text-align: center; margin-right: 150px;
   margin-left: 150px;}
+.p1 {text-align: center; margin-right: 150px;
+  margin-left: 150px;}
 div {text-align: center;}
 
 
@@ -128,11 +130,13 @@ div {text-align: center;}
 <br>
 
 <h1 style="font-size:300%;">I am a Problem Solver.</h1>
+
 <br>
-<p style="color:DodgerBlue;"style="font-size:500%;"> The word consultant is defined as someone who provides expert advice. My life has been developed around this basic premise. Advice is
+
+<p1 style="color:DodgerBlue;"style="font-size:500%;"> The word consultant is defined as someone who provides expert advice. My life has been developed around this basic premise. Advice is
   shared when there is a problem with a current system or where there is room for that system to improve. The advice that I often give 
   is to myself in order to continuously improve my life. I also offer advice, often times to no avail, to others. 
-</p>
+</p1>
 
 <p style="font-size:150%;"> This page will be used to update myself and the world about my life happenings. I hope to write frequently on this 
   but alas, all wishes do not come true. I have a lot of interests, endeavors and passions that I hope to share through this platform so 
