--- a/index.html
+++ b/index.html
@@ -147,7 +147,12 @@ div {text-align: center;}
 
 
 <div class="footer">
-  <p>Footer</p>
+  <p>
+    <!-- Calendly inline widget begin -->
+    <div class="calendly-inline-widget" data-url="https://calendly.com/meetwithhisham" style="min-width:320px;height:630px;"></div>
+    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
+    <!-- Calendly inline widget end -->
+  </p>
 </div>
 
 </body>
