--- a/index.html
+++ b/index.html
@@ -148,10 +148,11 @@ div {text-align: center;}
 
 <div class="footer">
   <p>
-    <!-- Calendly inline widget begin -->
-    <div class="calendly-inline-widget" data-url="https://calendly.com/meetwithhisham" style="min-width:320px;height:630px;"></div>
-    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
-    <!-- Calendly inline widget end -->
+    <!-- Calendly link widget begin -->
+    <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+    <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
+    <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/meetwithhisham'});return false;">Schedule time with me</a>
+    <!-- Calendly link widget end -->
   </p>
 </div>
 
